--- a/src/components/_layout.scss
+++ b/src/components/_layout.scss
@@ -628,7 +628,11 @@ pre tt:after {
 
 main {
   margin: 0px 2%;
+  max-width: 1500px;
   @include breakpoint(s) {
     margin: 0px 8%;
+  }
+  @include breakpoint(l) {
+    margin: 0px 5%;
   }
 }
