--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -108,7 +108,6 @@ input {
   width: 100%;
   @include breakpoint(s) {
     width: 60%;
-    margin: 30px;
   }
 }
 
@@ -117,6 +116,7 @@ input {
   @include breakpoint(s) {
     width: 80%;
     margin-left: 20%;
+    margin-top: 50px;
   }
 }
 
@@ -138,5 +138,11 @@ input {
   @include breakpoint(xl) {
     margin-left: 80%;
     width: 270px;
+  }
+}
+
+.text {
+  @include breakpoint(s) {
+    margin: 50px;
   }
 }
